--- a/MessagesToBook.toml
+++ b/MessagesToBook.toml
@@ -171,7 +171,7 @@ to = "Client"
 operation = "update"
 properties = [
 	{ from="ServerGroupId", to="ServerGroups", operation="add" },
-	# We explicitely throw away the server group name.
+	# We explicitly throw away the server group name.
 	# Otherwise it would overwrite our client name because of automated
 	# matching.
 	{ function="VoidFun", tolist=["Name"] },
