Add some TS5 fields
- storage quota for channels
- user tag
- min clients before silence got bigger
- administrative domain for servers

--- a/Book.toml
+++ b/Book.toml
@@ -75,6 +75,7 @@ properties = [
 	{ name="PhoneticName", type="str", opt=true },
 	{ name="Icon", type="IconId", opt=true },
 	{ name="IsPrivate", type="bool", opt=true },
+	{ name="StorageQuota", type="u32", opt=true },
 	{ name="Subscribed", type="bool" },
 	{ name="PermissionHints", type="ChannelPermissionHint", opt=true },
 	{ name="OptionalData", type="OptionalChannelData", opt=true },
@@ -187,6 +188,7 @@ properties = [
 	{ name="CountryCode", type="str", doc="Like US, DE" },
 	{ name="InheritedChannelGroupFromChannel", type="ChannelId" },
 	{ name="Badges", type="str" },
+	{ name="UserTag", type="str", opt=true },
 	{ name="PermissionHints", type="ClientPermissionHint", opt=true },
 	{ name="OptionalData", type="OptionalClientData", opt=true },
 	{ name="ConnectionData", type="ConnectionClientData", opt=true },
@@ -207,7 +209,7 @@ properties = [
 	{ name="ComplainAutobanCount", type="u32" },
 	{ name="ComplainAutobanTime", type="Duration" },
 	{ name="ComplainRemoveTime", type="Duration" },
-	{ name="MinClientsInChannelBeforeForcedSilence", type="u16", doc="How many clients can be in a server before silence is forced" },
+	{ name="MinClientsInChannelBeforeForcedSilence", type="u32", doc="How many clients can be in a server before silence is forced" },
 	{ name="AntifloodPointsTickReduce", type="u32" },
 	{ name="AntifloodPointsToCommandBlock", type="u32" },
 	{ name="AntifloodPointsToIpBlock", type="u32" },
@@ -305,6 +307,7 @@ properties = [
 	{ name="TempChannelDefaultDeleteDelay", type="Duration" },
 	{ name="ProtocolVersion", type="u16" },
 	{ name="License", type="LicenseType" },
+	{ name="AdministrativeDomain", type="str", opt=true },
 	{ name="OptionalData", type="OptionalServerData", opt=true },
 	{ name="ConnectionData", type="ConnectionServerData", opt=true },
 ]
